framework for stow

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,9 +1,10 @@
+
 # put this into your home directory named ".tmux.conf"
 
 set -g mouse on
 
 setw -g mode-keys vi
-bind -T copy-mode-vi MouseDragEnd1Pane send -X copy-pipe-and-cancel "xclip -in -selection clipboard"
+#bind -T copy-mode-vi MouseDragEnd1Pane send -X copy-pipe-and-cancel "xclip -in -selection clipboard"
 
 set-option -g focus-events on
 set-option -sg escape-time 10
@@ -28,3 +29,7 @@ set -g status-style 'fg=#4c4c4c'
 
 setw -g window-status-style 'bg=gray'
 setw -g window-status-current-format ' #I #W #F '
+
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xclip -selection clipboard -in"
+#bind-key p run "xclip -selection clipboard -out | tmux load-buffer - && tmux paste-buffer"
+
