--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -4,7 +4,13 @@
 set -g mouse on
 
 setw -g mode-keys vi
-#bind -T copy-mode-vi MouseDragEnd1Pane send -X copy-pipe-and-cancel "xclip -in -selection clipboard"
+bind-key h select-pane -L
+bind-key j select-pane -D
+bind-key k select-pane -U
+bind-key l select-pane -R
+
+unbind r
+bind r source-file ~/.tmux.conf
 
 set-option -g focus-events on
 set-option -sg escape-time 10
