general clean up and some nvim keymaps

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -11,7 +11,7 @@ bind r source-file ~/.tmux.conf
 
 set-option -g focus-events on
 set-option -sg escape-time 10
-set-option -a terminal-features 'tmux-256color:RGB'
+set-option -a terminal-features 'xterm-256color:RGB'
 
 # ==== DESIGN TWEAKS ====
 
