--- a/gitconfig/.gitconfig
+++ b/gitconfig/.gitconfig
@@ -12,5 +12,5 @@
     navigate = true
     dark = true
 
-[merge]
-    conflictStyle = zdiff3
+[alias]
+	lgb = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset%n' --abbrev-commit --date=relative --branches
