added zsh config

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,10 +1,14 @@
 set -g mouse on
 
 setw -g mode-keys vi
+bind-key -T copy-mode-vi y send-keys Space
 bind-key h select-pane -L
 bind-key j select-pane -D
 bind-key k select-pane -U
 bind-key l select-pane -R
+
+bind-key C-p send-keys C-p
+bind-key C-n send-keys C-n
 
 unbind r
 bind r source-file ~/.tmux.conf
@@ -12,8 +16,6 @@ bind r source-file ~/.tmux.conf
 set-option -g focus-events on
 set-option -sg escape-time 10
 set-option -a terminal-features 'xterm-256color:RGB'
-
-# ==== DESIGN TWEAKS ====
 
 # copy mode
 setw -g mode-style 'fg=black bg=grey'
@@ -29,6 +31,3 @@ set -g status-style 'fg=#4c4c4c'
 
 setw -g window-status-style 'bg=gray'
 setw -g window-status-current-format ' #I #W #F '
-
-bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xclip -selection clipboard -in"
-
