more zsh things

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,7 +1,7 @@
 set -g mouse on
 
 setw -g mode-keys vi
-bind-key -T copy-mode-vi y send-keys Space
+bind-key -T copy-mode-vi v send-keys Space
 bind-key h select-pane -L
 bind-key j select-pane -D
 bind-key k select-pane -U
